@@ -1,3 +1,8 @@
+modxRepository-1.2.1-beta
+=============================================================
+1.  getRepositories processor optimization
+
+
 modxRepository-1.2.0-beta
 =============================================================
 1.  Added multi-contexts solution
